# Centerfuge

./: Inventions for 3D models.txt  README.md  Random-thoughts.md  Scratchpad.md  Textfile.md  blobstack.blend  blobstack.blend1  boid-plane.blend1  build_eloi_morlock_suite.py  colonnade.blend  colonnade.blend1  epicycles.blend  failed-interpolation-test.blend  font-display.blend  font-display.blend1  four-moons.blend  fractal-landscape.blend  index.html  lava-lamp.blend  make_all.sh  principia_ratio_entropica_vol3.tex  principia_ratio_entropica_vol4.tex  principia_ratio_entropica_vol6.tex  random-words-aligned-animation.blend  random-words-aligned.blend  random-words.blend  rsvp_blender_extend.py  rsvp_blender_gen.py  shape-kitbash.blend  shape-outline-kitbash.blend  spinning-cage.blend  tetraorthodrome.mtl
Blender Files/: big-bounce.blend  dinosaur waiting.blend1  fractal-landscape.blend  fractal-landscape.blend1  homeward-bound.blend  mount mental hospital.blend1  mount mental hospital.blend2  oasis diamond monkey face.blend  self portrait.blend1  self portrait.blend2  shark.blend1  surface area.blend1  teacup.blend1  trees.blend1
architecture/: README.txt  file-tree.txt  index.html  run_xylomorphic_test.sh  xylomorphic_blender_gen.py
core/: Makefile  README.md
core/python/linguistics_py/: Cargo.toml  pyproject.toml
core/python/linguistics_py/src/: lib.rs
core/python/semantics_py/: Cargo.toml  pyproject.toml
core/python/semantics_py/src/: lib.rs
core/python/simulation_py/: Cargo.toml  pyproject.toml
core/python/simulation_py/src/: lib.rs
core/rust/: .gitignore  Cargo.toml  Dockerfile
core/rust/.github/workflows/: ci.yml
core/rust/crates/core_types/: Cargo.toml
core/rust/crates/core_types/src/: lib.rs
core/rust/crates/io/: Cargo.toml
core/rust/crates/io/src/: lib.rs
core/rust/crates/linguistics/: Cargo.toml
core/rust/crates/linguistics/src/: lib.rs
core/rust/crates/semantics/: Cargo.toml
core/rust/crates/semantics/src/: lib.rs
core/rust/crates/simulation/: Cargo.toml
core/rust/crates/simulation/src/: lib.rs
core/rust/crates/tiling/: Cargo.toml
core/rust/crates/tiling/src/: lib.rs
core/rust/examples/: state.json
core/rust/projects/agora/: Cargo.toml  README.md
core/rust/projects/agora/src/: main.rs
core/rust/projects/aos/: Cargo.toml  README.md
core/rust/projects/aos/src/: main.rs
core/rust/projects/bioforge/: Cargo.toml  README.md
core/rust/projects/bioforge/src/: main.rs
core/rust/projects/crystal_plenum/: Cargo.toml  README.md
core/rust/projects/crystal_plenum/src/: main.rs
core/rust/projects/earth_cube/: Cargo.toml  README.md
core/rust/projects/earth_cube/src/: main.rs
core/rust/projects/flyxion/: Cargo.toml  README.md
core/rust/projects/flyxion/src/: main.rs
core/rust/projects/geozotic/: Cargo.toml  README.md
core/rust/projects/geozotic/src/: main.rs
core/rust/projects/lambda_arabic/: Cargo.toml  README.md
core/rust/projects/lambda_arabic/src/: main.rs
core/rust/projects/rsvp/: Cargo.toml  README.md
core/rust/projects/rsvp/src/: main.rs
core/rust/projects/sga/: Cargo.toml  README.md
core/rust/projects/sga/src/: main.rs
core/rust/projects/sith/: Cargo.toml  README.md
core/rust/projects/sith/src/: main.rs
core/rust/projects/spellpop/: Cargo.toml  README.md
core/rust/projects/spellpop/src/: main.rs
core/rust/projects/swype_hero/: Cargo.toml  README.md
core/rust/projects/swype_hero/src/: main.rs
core/rust/projects/tartan/: Cargo.toml  README.md
core/rust/projects/tartan/src/: main.rs
core/rust/projects/zettelkasten/: Cargo.toml  README.md
core/rust/projects/zettelkasten/src/: main.rs
core/rust/scripts/: dev.sh
eloi_morlock_suite/: Dockerfile  MANIFEST_SCHEMA.json  compose_av.sh  run_eloi_morlock_stills.sh
essay/: coq.lst  monograph.aux  monograph.bbl  monograph.bcf  monograph.blg  monograph.loa  monograph.out  monograph.run.xml  monograph.tex  monograph.toc
experiments/: make_fast_solids_lab.sh  make_solids_lab.sh
(+446 files in other folders)
