[package]
name = "proj-sga"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# add shared crates as needed per project
rsvp-core-types = { path = "../../crates/core_types" }
flyxion-io = { path = "../../crates/io" }
